--- a/my-tracker/src/pages/App/App.css
+++ b/my-tracker/src/pages/App/App.css
@@ -12,3 +12,25 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.container {
+  background-image: url(./images/run.jpeg);
+  opacity: 0.7;
+  color: black;
+  font-size: 20px;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  min-width: 50%;
+  min-height: 50%;
+}
+
+.header-footer {
+  color: purple;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 30px;
+}
