--- a/my-tracker/src/pages/App/App.css
+++ b/my-tracker/src/pages/App/App.css
@@ -13,20 +13,16 @@
   color: white;
 }
 
-.container {
+.wrapper {
   background-image: url(./images/run.jpeg);
   opacity: 0.7;
   color: black;
   font-size: 20px;
   background-size: cover;
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   margin: auto;
   min-width: 100%;
-  min-height: 100%;
+  min-height: 100vh !important;
 }
 
 .header-footer {
